# DesktopGIFRendering

./: CMakeLists.txt  README.md
lib/glad/: glad.c  glad.h
src/: GifDecoder.cpp  GifDecoder.h  Gui.cpp  Gui.h  Renderer.cpp  Renderer.h  Shader.h  main.cpp
src/shader/: fragmentshader.glsl  vertexshader.glsl
